--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/three": "^0.180.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "ogl": "^1.0.11",
